[package]
name = "isixhosa"
version = "0.1.1"
description = "A library to help process text in isiXhosa"
authors = ["Restioson <restiosondev@gmail.com>"]
edition = "2018"
license = " GPL-3.0-or-later"
repository = "https://github.com/Restioson/isixhosa"
documentation = "https://docs.rs/isixhosa"
readme = "README.md"
keywords = ["isixhosa", "xhosa", "language", ]

[dependencies]
unicode-normalization = "0.1.19"
num_enum = { version = "0.5.4", optional = true }
serde = { version = "1", optional = true }

[features]
with-num_enum-0_5 = ["num_enum"]
with-serde-1 = ["serde"]
